rackspace/apps/meeting-tools/dev/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meeting-tools
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`meeting-tools.marquescg.com`) && PathPrefix(`/dev/api`)"
      priority: 20
      services:
        - name: dev-backend-service
          port: 8000
    - kind: Rule
      match: "Host(`meeting-tools.marquescg.com`) && PathPrefix(`/dev`)"
      priority: 10
      services:
        - name: dev-frontend-service
          port: 3000
  tls:
    secretName: meeting-tools-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: meeting-tools-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`meeting-tools.marquescg.com`) && PathPrefix(`/dev/api`)"
      priority: 20
      middlewares:
        - name: dev-https-redirect
      services:
        - name: dev-backend-service
          port: 8000
    - kind: Rule
      match: "Host(`meeting-tools.marquescg.com`) && PathPrefix(`/dev`)"
      priority: 10
      middlewares:
        - name: dev-https-redirect
      services:
        - name: dev-frontend-service
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
